<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">旅行印章</string>
    <string name="account_is_null">账号不能为空,请重新输入</string>
    <string name="mobile_is_null">手机不能为空,请重新输入</string>
    <string name="email_is_null">邮箱不能为空,请重新输入</string>
    <string name="password_is_null">密码不能为空,请重新输入</string>
    <string name="account_is_illegal">昵称命名非法,请重新输入</string>
    <string name="mobile_is_illegal">手机号码输入格式不正确,请重新输入</string>
    <string name="email_is_illegal">电子邮箱地址格式不正确,请重新输入</string>
    <string name="password_is_illegal">密码输入格式不正确,请重新输入</string>
    <string name="back">返回</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_weibo">微博登录</string>
    <string name="login">登录</string>
    <string name="login_hint_email">邮箱地址</string>
    <string name="register">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_hint_password">密码</string>
    <string name="login_auth_title">第三方平台登录</string>
    <string name="login_ing">正在登录...</string>
    <string name="menu_setting_title">软件设置</string>
    <string name="menu_feedback_title">意见反馈</string>
    <string name="menu_binding_account_title">绑定账号</string>
    <string name="menu_check_for_updates_title">检查更新</string>
    <string name="menu_about_title">关于</string>
    <string name="menu_my_collection_title">我的收藏</string>
    <string name="menu_my_footprints_title">我的足迹</string>
    <string name="menu_cancellation_landing_title">注销登陆</string>
    <string name="version_info_title">版本号\t</string>
    <string name="reset_password_tips">请点击"重置密码"按钮,并根据邮箱收到的邮件提示重置您的账号密码</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_password_mail_hint">请输入需要重置密码的用户邮箱</string>
    <string name="send_email_success">重置密码邮件已成功发送,请及时查收并重置您的账号密码\n$s秒后可重新发送重置密码邮件</string>
    <string name="send_email_fail">重置密码邮件发送失败</string>
    
    <string name="send_email_fail_error_205">,不存在绑定该邮箱的账号</string>
    

</resources>